<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" >

                <TextView
                    android:id="@+id/title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    tools:ignore="MissingPrefix"
                    fontPath="fonts/OpenSans-SemiBold.ttf" />

                <ImageButton
                    android:id="@+id/more_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_dot"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center|end"
                    android:background="@android:color/transparent"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="?android:attr/actionBarSize"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:weightSum="6"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/llAudioVideo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_weight="1.125">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imgMenuIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_audio_video" />

                            <TextView
                                android:id="@+id/textMenuName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@drawable/slidingtab_title_color"
                                android:text="@string/audio_video"
                                android:paddingTop="2dp"
                                android:paddingBottom="2dp"
                                android:textSize="9sp"
                                tools:ignore="MissingPrefix"
                                fontPath="fonts/OpenSans-SemiBold.ttf" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/llDocument"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_weight="1.125">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_document" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@drawable/slidingtab_title_color"
                                android:text="@string/document"
                                android:paddingTop="2dp"
                                android:paddingBottom="2dp"
                                android:textSize="9sp"
                                tools:ignore="MissingPrefix"
                                fontPath="fonts/OpenSans-SemiBold.ttf"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5">
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/llNotes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_weight="1.125">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_notes" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@drawable/slidingtab_title_color"
                                android:text="@string/notes"
                                android:paddingTop="2dp"
                                android:paddingBottom="2dp"
                                android:textSize="9sp"
                                tools:ignore="MissingPrefix"
                                fontPath="fonts/OpenSans-SemiBold.ttf"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/llSettings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_weight="1.125">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_settings" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@drawable/slidingtab_title_color"
                                android:text="@string/settings"
                                android:paddingTop="2dp"
                                android:paddingBottom="2dp"
                                android:textSize="9sp"
                                tools:ignore="MissingPrefix"
                                fontPath="fonts/OpenSans-SemiBold.ttf"/>
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/llGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_gallery"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemBackground="@android:color/transparent"
        app:menu="@menu/activity_main_drawer"
        app:headerLayout="@layout/nav_header_main" />
</android.support.v4.widget.DrawerLayout>